--- a/app/src/main/res/menu/menu_first.xml
+++ b/app/src/main/res/menu/menu_first.xml
@@ -1,6 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".FirstActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".FirstActivity">
+
+    <item
+        android:id="@+id/menu_item_www"
+        android:title="Strona WWW"
+        android:icon="@mipmap/ic_launcher"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_item_sms"
+        android:title="Napisz SMSa"
+        app:showAsAction="never" />
+
 </menu>
